Add transaction update delete and record search API
