# internal/routers/router.go
@@ -50,15 +50,18 @@ func routeExistsWithDifferentMethod(r *http.Request) bool {
 		return r.Method != http.MethodGet
 	case "/categories", "/tags", "/members", "/accounts", "/exchange-rates", "/transactions":
 		return r.Method != http.MethodGet && r.Method != http.MethodPost
+	case "/records":
+		return r.Method != http.MethodGet
 	default:
 		return resourceIDPath(r.URL.Path, "/categories/") && r.Method != http.MethodGet && r.Method != http.MethodPatch && r.Method != http.MethodDelete ||
 			resourceIDPath(r.URL.Path, "/tags/") && r.Method != http.MethodGet && r.Method != http.MethodPatch && r.Method != http.MethodDelete ||
 			resourceIDPath(r.URL.Path, "/members/") && r.Method != http.MethodGet && r.Method != http.MethodPatch && r.Method != http.MethodDelete ||
 			resourceIDPath(r.URL.Path, "/accounts/") && r.Method != http.MethodGet && r.Method != http.MethodPatch && r.Method != http.MethodDelete ||
+			accountRecordsPath(r.URL.Path) && r.Method != http.MethodGet ||
 			accountCreditLimitHistoryPath(r.URL.Path) && r.Method != http.MethodGet && r.Method != http.MethodPost ||
 			resourceIDPath(r.URL.Path, "/credit-limit-history/") && r.Method != http.MethodGet && r.Method != http.MethodDelete ||
 			resourceIDPath(r.URL.Path, "/exchange-rates/") && r.Method != http.MethodGet && r.Method != http.MethodPatch && r.Method != http.MethodDelete ||
-			resourceIDPath(r.URL.Path, "/transactions/") && r.Method != http.MethodGet
+			resourceIDPath(r.URL.Path, "/transactions/") && r.Method != http.MethodGet && r.Method != http.MethodPut && r.Method != http.MethodDelete
 	}
 }
 
